Fix scrollbar padding

--- a/src/assets/styles/cmps/_AddTask.scss
+++ b/src/assets/styles/cmps/_AddTask.scss
@@ -20,7 +20,7 @@
 
         > textarea {
             box-sizing: border-box;
-            width: 100%;
+            width: 250px;
             padding: 8px 8px 4px 12px;
             background: none;
             border: none;
