--- a/src/assets/styles/cmps/_TaskPreview.scss
+++ b/src/assets/styles/cmps/_TaskPreview.scss
@@ -1,11 +1,13 @@
 .task-preview {
   display: flex;
   flex-direction: column;
-  width: 256px;
+  // width: 256px;
   border-radius: 8px;
   margin-bottom: 7px;
   padding: 8px 8px 4px 12px;
-  box-shadow: 0 1px 0 rgb(9 30 66 / 25%);
+  // box-shadow: 0 1px 0 rgb(9 30 66 / 25%);
+  box-shadow: $task-shadow-raised;
+  border: 0.1px solid rgb(212, 212, 212);
   background-color: $task-bg-clr;
   cursor: pointer;
 
