--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -42,6 +42,10 @@ $ds-background-warning-bold-hovered: #CF9F02;
 $ds-text-warning-inverse: #172B4D;
 $label-text-accent-yellow-bolder:#533F04;
 $ds-text-accent-green-bolder: #164B35;
+
+// task : 
+$task-shadow-raised: 0px 1px 1px #091E4240, 0px 0px 1px #091E424F;
+
 // Breakpoints
 $mobile-breakpoint: 460px;
 $narrow-breakpoint: 720px;
